# Multi-Vendor-Service

./: README.md  compose.yaml  k6_output.txt  loadtest.js  mock_vendor.py  pyproject.toml  worker.py
.zed/: debug.json
app/: config.py  logger.py  main.py  models.py  mongo.py  queue.py
app/routes/: helper.py  hook.py  jobs.py  models.py
docker/worker/: Dockerfile
