[project]
name = "multi-vendor-fetch-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.13",
    "motor>=3.3.0",
    "pymongo>=4.6.0",
    "pydantic-settings>=2.0.0",
]

[tool.uv.workspace]
members = ["mock_vendor"]
